--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,7 +14,7 @@ message.main.menu=Main menu
 message.unzip.processing=Extracting the file... Processing time depends on the size of the file.
 message.unzip.welcome=Send me the archives for extracting in following formats: <b>ZIP, RAR</b>. Developers are working on adding new formats.\n\n\
 <b>Warning</b>:\n\
-<b>1)</b> Don''t click <b>Back</b> button and send a new file while the request is executing, otherwise the current request will be canceled.\n\
+<b>1)</b> Don't click <b>Back</b> button and send a new file while the request is executing, otherwise the current request will be canceled.\n\
 <b>2)</b> Use the <b>\u23E9</b> and <b>\u23EA</b> buttons to move between pages. If there are many files in the archive, the list of files will be displayed page by page.
 message.supported.zip.formats=For now I can only process archives in next formats: ZIP, RAR. Developers are working on adding new formats.
 message.unsupported.format=I can’t work with files in this format yet. The supported file formats can be found \
@@ -72,7 +72,7 @@ message.session.expired=Session expired. Try to return to the previous menu and 
 rename.command.name=Rename
 message.rename.file=Use @SmartRenamerBot for rename file.
 message.new.file.name=Submit a new name without extension to change only the name or send a name with extension to change the full name including extension.
-message.rename.forbidden=Telegram doesn''t allow changing the name of this file
+message.rename.forbidden=Telegram doesn't allow changing the name of this file
 unzip.command.name=Unzip
 message.zip.encrypted=I do not know how to work with archives protected by passwords. Developers are working on my training.
 message.zip.invalid=Archive is corrupted or has the wrong format
@@ -87,19 +87,19 @@ message.choose.language=Choose language
 message.language.selected=Language updated
 extract.text.command.name=Extract text
 message.file.to.extract=Send me an image to extract text. I can extract text in any language.
-message.extraction.impossible=I can''t extract text from this file. Please, send an image with text.
-message.empty.text.extracted=I couldn''t extract text from this image
+message.extraction.impossible=I can't extract text from this file. Please, send an image with text.
+message.empty.text.extracted=I couldn't extract text from this image
 message.extraction.processing=Extraction...
 archive.command.name=Archive
 message.archive.files=Send me files and when finished choose an archive type on the keyboard.\n\n\
-<b>Warning</b>:\nDon''t click <b>Back</b> button and send a new file while the request is executing, otherwise the current request will be canceled.
+<b>Warning</b>:\nDon't click <b>Back</b> button and send a new file while the request is executing, otherwise the current request will be canceled.
 message.archive.type.unsupported=I can''t create <b>{0}</b> archive yet. Developers are working on it.
 archive.file.name=Archive
 message.choose.archive.type=Please choose archive type on the keyboard
 message.archive.files.empty=At first send me some files and than choose target archive type
 message.gif.warn=The telegram processes the gif as a video so the file will be sent in the archive. \
 If necessary, you can extract the archive in the <b>Unzip</b> section.
-message.file.cant.be.added.to.archive=I can''t add this file to the archive. Developers are working on it.
+message.file.cant.be.added.to.archive=I can't add this file to the archive. Developers are working on it.
 message.archive.current.files=Files: {0}\n\n\
 Total: {1}
 image.editor.command.name=Imageditor
@@ -124,9 +124,9 @@ message.editor.settings=Mode: <b>{0}</b>\n\
 Inaccuracy: <b>{1}</b>
 cancel.command.description=\u274cCancel
 message.cant.cancel.answer=You can cancel only 1 times
-message.conversion.failed=Something went wrong. The query can''t be processed now. The problem will be resolved soon, and the file will be sent. \
+message.conversion.failed=Something went wrong. The query can't be processed now. The problem will be resolved soon, and the file will be sent. \
 <b>Thank you for your patience.</b>
-message.damaged.file=File is <b>damaged</b> or has <b>incorrect format</b>. It can''t be converted.
+message.damaged.file=File is <b>damaged</b> or has <b>incorrect format</b>. It can't be converted.
 message.image.editor.mode.welcome=<b>Negative mode</b> - remove a color.  <b>Positive mode</b> - remove all colors except selected.
 message.image.transparent.color.welcome=Select a color on the keyboard or send its <b>hex</b> code. \
 What is the <b>hex</b> code you can see here - <a href="https://tgraph.io/What-is-a-hex-color-code-06-14">Hex code</a>.\n\n\
@@ -154,7 +154,7 @@ sketch.filter.command.description=Sketch
 negative.filter.command.description=Invert
 message.bad.image=Send me an image to start editing
 message.image.editor.welcome=The image in this message will be automatically updated during editing, \
-if this didn''t happen or there were any problems with displaying the image \
+if this didn't happen or there were any problems with displaying the image \
 click the <b>Refresh</b> button.
 message.negative.mode.description=Negative(remove selected color from an image)
 message.positive.mode.description=Positive(remove all colors from an image except selected)
@@ -189,8 +189,8 @@ message.conversion.executed=Conversion executed
 extract.all.command.description=Extract all
 message.extract.file.impossible=The file cannot be extracted. The work with this archive has already been completed.
 message.extract.all.processing=Extracting the files... Processing time depends on the size of the files.
-message.too.many.files.in.archive=Too many files in the archive. The archive can''t be processed now. Developers are working on it.
-message.extract.file.error=Archive error. The file couldn''t be extracted.
+message.too.many.files.in.archive=Too many files in the archive. The archive can't be processed now. Developers are working on it.
+message.extract.file.error=Archive error. The file couldn't be extracted.
 message.unzip.error=Archive error. Extraction is impossible.
 message.next.page=\u23E9
 message.prev.page=\u23EA
