Прогресс бар в конвертациях

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,5 @@
 message.file.queued=The file will be converted to <b>{0}</b>\n\
-Queue position: <b>{1}</b>\n\
-You can see the status of query processing in <b>My queries</b> section.
+Queue position: <b>{1}</b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Size: <b>{0}</b>
 message.unknown.command=I can’t execute this command
@@ -71,3 +70,10 @@ help.command.description=help
 formats.command.description=conversion formats
 message.input.file.wait=Wait until finish processing last file
 message.input.file.wait.ttl=You can send new file after {0} seconds
+waiting.step=Waiting
+downloading.step=Downloading
+converting.step=Converting
+uploading.step=Uploading
+icon.check=\u2705
+message.eta=ETA:
+message.speed=Speed
