--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,6 +1,5 @@
 message.file.queued=Файл будет сконвертирован в <b>{0}</b>\n\
-Место в очереди: <b>{1}</b>\n\
-Статус обработки запроса вы можете увидеть в разделе <b>Мои запросы</b>.
+Место в очереди: <b>{1}</b>
 message.file.format=Формат: <b>{0}</b>
 message.file.size=Размер: <b>{0}</b>
 message.unknown.command=Я не могу выполнить данную команду
