message bot is sleeping

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -77,3 +77,4 @@ uploading.step=Uploading
 icon.check=\u2705
 message.eta=ETA:
 message.speed=Speed
+message.bot.is.sleeping=There was telegram <b>flood wait</b> limit. I can''t handle files bigger than <b>20 MB</b> now. Try again after about <b>{0} seconds</b>.
