Конвертация текста отправляемого подряд

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -77,3 +77,4 @@ formats.command.description=поддерживаемые форматы конв
 message.input.file.wait=Подождите пока обработается последний отправленный вами файл
 message.input.file.wait.ttl=Вы можете отправить новый файл через {0} секунд(ы)
 message.bot.is.sleeping=Сработал лимит телеграмм <b>flood wait</b>. Я не могу скачать файл больше <b>20 MB</b> сейчас. Попробуйте еще раз примерно через <b>{0} сек</b>.
+message.text.appended=Текст добавлен.
