Конвертация картинок в pdf

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,7 +6,7 @@ message.unknown.command=I can’t execute this command
 message.error=Something went wrong. <b>Please, report the incident to</b> <a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A">Customer service</a> <b>and retry the request later.</b>
 message.empty.file.name=File
 message.choose.another.format=Choose another format
-message.choose.target.extension=Great! I can convert it. Choose type for converting on your keyboard.
+message.choose.target.extension=Great! I can convert it. Choose type for converting on the keyboard.
 go.back.command.name=\u2B05Back
 message.bot.restarted=The bot was restarted. <b>Please, retry the request.</b>
 message.unsupported.format=I can’t work with files in this format yet. The supported file formats can be found \
@@ -48,8 +48,7 @@ If any format which you want not supported for now, you can write to us too in <
 and developers will add it.
 message.reply=Thanks for feedback.In the near future, your appeal will be reviewed by the developers and the <b>problem will be fixed</b>.
 report.command.description=Report a bug
-message.too.many.files=You sent several files at a time. I can only process files one at a time, \
-therefore, only the <b>first file</b> will be processed.
+message.choose.type=Choose type for converting on the keyboard
 message.session.expired=Session expired. Try to return to the previous menu and perform the action again from the very beginning.
 message.too.large.in.file=You sent a file with a size too large {0}. Telegram limit is 2000 MB.
 message.too.large.out.file=The resulting file {0} is too large {1} and we cannot send it. Telegram limit is 2000 MB.
@@ -79,3 +78,5 @@ message.eta=ETA:
 message.speed=Speed
 message.bot.is.sleeping=There was telegram <b>flood wait</b> limit. I can''t handle files bigger than <b>20 MB</b> now. Try again after about <b>{0} seconds</b>.
 message.text.appended=Text appended.
+message.file.appended=File appended.
+message.files.appended=Files appended.
