Конвертация картинок в doc, docx, tiff

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,7 +6,8 @@ message.unknown.command=I can’t execute this command
 message.error=Something went wrong. <b>Please, report the incident to</b> <a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A">Customer service</a> <b>and retry the request later.</b>
 message.empty.file.name=File
 message.choose.another.format=Choose another format
-message.choose.target.extension=Great! I can convert it. Choose type for converting on the keyboard.
+message.choose.target.extension=Great! I can convert it. Choose type for converting on the keyboard. Keep sending files if you want to combine them into 1 format. \
+For example images to pdf.
 go.back.command.name=\u2B05Back
 message.bot.restarted=The bot was restarted. <b>Please, retry the request.</b>
 message.unsupported.format=I can’t work with files in this format yet. The supported file formats can be found \
