Удалил не нужные сообщения

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -79,5 +79,4 @@ message.eta=ETA:
 message.speed=Speed
 message.bot.is.sleeping=There was telegram <b>flood wait</b> limit. I can''t handle files bigger than <b>20 MB</b> now. Try again after about <b>{0} seconds</b>.
 message.text.appended=Text appended.
-message.file.appended=File appended.
-message.files.appended=Files appended.
+message.file.appended=File added.
