Фикс может паралельно поступить много файлов

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ message.file.queued=The file will be converted to <b>{0}</b>\n\
 Queue position: <b>{1}</b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Size: <b>{0}</b>
+message.files.count=Files: <b>{0}</b>
 message.unknown.command=I can’t execute this command
 message.error=Something went wrong. <b>Please, report the incident to</b> <a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A">Customer service</a> <b>and retry the request later.</b>
 message.empty.file.name=File
@@ -78,5 +79,6 @@ icon.check=\u2705
 message.eta=ETA:
 message.speed=Speed
 message.bot.is.sleeping=There was telegram <b>flood wait</b> limit. I can''t handle files bigger than <b>20 MB</b> now. Try again after about <b>{0} seconds</b>.
-message.text.appended=Text appended.
-message.file.appended=File added.
+message.text.appended=Text appended
+message.file.appended=File added
+message.files.appended=Files added
