--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -2,6 +2,7 @@ message.file.queued=Файл будет сконвертирован в <b>{0}</
 Место в очереди: <b>{1}</b>
 message.file.format=Формат: <b>{0}</b>
 message.file.size=Размер: <b>{0}</b>
+message.files.count=Файлов: <b>{0}</b>
 message.unknown.command=Я не могу выполнить данную команду
 message.error=Что то пошло не так. <b>Пожалуйста, сообщите об инциденте в</b> <a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A">Службу поддержки</a> <b>и повторите запрос.</b>
 message.empty.file.name=Файл
@@ -77,5 +78,6 @@ formats.command.description=поддерживаемые форматы конв
 message.input.file.wait=Подождите пока обработается последний отправленный вами файл
 message.input.file.wait.ttl=Вы можете отправить новый файл через {0} секунд(ы)
 message.bot.is.sleeping=Сработал лимит телеграмм <b>flood wait</b>. Я не могу скачать файл больше <b>20 MB</b> сейчас. Попробуйте еще раз примерно через <b>{0} сек</b>.
-message.text.appended=Текст добавлен.
-message.file.appended=Файл добавлен.
+message.text.appended=Текст добавлен
+message.file.appended=Файл добавлен
+message.files.appended=Файлы добавлены
