--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,7 @@
 message.file.queued=The file will be converted to <b>{0}</b>\n\
 Queue position: <b>{1}</b>
+message.files.queued=The files will be converted to <b>{0}</b>\n\
+Queue position: <b>{1}</b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Size: <b>{0}</b>
 message.files.count=Files: <b>{0}</b>
