прогресс загрузки списка файлов

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,11 +75,13 @@ message.input.file.wait=Wait until finish processing last file
 message.input.file.wait.ttl=You can send new file after {0} seconds
 waiting.step=Waiting
 downloading.step=Downloading
+downloading.files.step=Downloaded {0} files of {1}
 converting.step=Converting
 uploading.step=Uploading
 icon.check=\u2705
 message.eta=ETA:
 message.speed=Speed
+message.calculated=calculated
 message.bot.is.sleeping=There was telegram <b>flood wait</b> limit. I can''t handle files bigger than <b>20 MB</b> now. Try again after about <b>{0} seconds</b>.
 message.text.appended=Text appended
 message.file.appended=File added
