--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -81,3 +81,4 @@ message.bot.is.sleeping=Сработал лимит телеграмм <b>flood 
 message.text.appended=Текст добавлен
 message.file.appended=Файл добавлен
 message.files.appended=Файлы добавлены
+message.calculated=вычисляется
