Incompressible video + av1 codec support

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -63,7 +63,8 @@ message.language.selected=Language updated
 cancel.command.description=\u274cCancel
 message.conversion.failed=Something went wrong. The query can't be processed now. The problem will be resolved soon, and the file will be sent. \
 <b>Thank you for your patience.</b>
-message.damaged.file=File is <b>damaged</b> or has <b>incorrect format</b>. It can't be converted.
+message.damaged.file=File is <b>damaged</b> or has <b>incorrect format</b>. It can't be converted. Perhaps the developers will fix a problem and I can send your file later.
+message.incompressible.video=I can't compress this video
 convert.command.description=conversion
 language.command.description=change language
 start.command.description=restart the bot
