--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -67,7 +67,8 @@ message.language.selected=Язык обновлен
 cancel.command.description=\u274cОтменить
 message.conversion.failed=Что то пошло не так. Запрос не может быть сейчас обработан. \
 Проблема будет решена в ближайшее время, и файл будет отправлен. <b>Спасибо за ваше терпение</b>.
-message.damaged.file=Файл <b>поврежден</b> или <b>имеет неверный формат</b>. Он не может быть сконвертирован.
+message.damaged.file=Файл <b>поврежден</b> или <b>имеет неверный формат</b>. Он не может быть сконвертирован. Возможно разработчики скоро исправят проблему и я смогу отправить вам файл позже.
+message.incompressible.video=Я не могу сжать это видео
 convert.command.description=конвертация
 language.command.description=изменить язык
 start.command.description=перезапустить бот
