Разделяем боты конвертации на конвертацию видео и документов и прочего

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -85,3 +85,5 @@ message.bot.is.sleeping=There was telegram <b>flood wait</b> limit. I can''t han
 message.text.appended=Text appended
 message.file.appended=File added
 message.files.appended=Files added
+message.default.conversion=Use @SmartConverter_bot for documents, images, links and text conversions
+message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
