--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -81,3 +81,5 @@ message.text.appended=Текст добавлен
 message.file.appended=Файл добавлен
 message.files.appended=Файлы добавлены
 message.calculated=вычисляется
+message.default.conversion=Используйте @SmartConverter_bot для конвертации документов, картинок, ссылок и текста
+message.video.conversion=Используйте @SmartVideoConverterBot для конвертации и сжатия видео
