Обновление статуса запроса

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -87,3 +87,5 @@ message.file.appended=File added
 message.files.appended=Files added
 message.default.conversion=Use @SmartConverter_bot for documents, images, links and text conversions
 message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
+update.query.status.command.description=Update status
+updated.callback.answer=Updated
