--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -83,3 +83,5 @@ message.files.appended=Файлы добавлены
 message.calculated=вычисляется
 message.default.conversion=Используйте @SmartConverter_bot для конвертации документов, картинок, ссылок и текста
 message.video.conversion=Используйте @SmartVideoConverterBot для конвертации и сжатия видео
+update.query.status.command.description=Обновить статус
+updated.callback.answer=Обновлено
