Команда для статистики по очереди

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -89,3 +89,6 @@ message.default.conversion=Use @SmartConverter_bot for documents, images, links 
 message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
 update.query.status.command.description=Update status
 updated.callback.answer=Updated
+message.stats=Processing: <b>{0}</b>\n\
+Waiting: <b>{1}</b>\n\
+Errors: <b>{2}</b>
