Fix вывод сообщения о добавлении в очередь при сжатии

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,5 +1,7 @@
 message.file.queued=Файл будет сконвертирован в <b>{0}</b>\n\
 Место в очереди: <b>{1}</b>
+message.files.queued=Видео файл будет сжат\n\
+Место в очереди: <b>{0}</b>
 message.file.format=Формат: <b>{0}</b>
 message.file.size=Размер: <b>{0}</b>
 message.files.count=Файлов: <b>{0}</b>
