Retry flood wait command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ Queue position: <b>{1}</b>
 message.files.queued=The files will be converted to <b>{0}</b>\n\
 Queue position: <b>{1}</b>
 message.video.compress.queued=The video will be compressed\n\
+Queue position: <b>{0}</b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Size: <b>{0}</b>
 message.files.count=Files: <b>{0}</b>
@@ -90,7 +91,8 @@ message.default.conversion=Use @SmartConverter_bot for documents, images, links 
 message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
 update.query.status.command.description=Update status
 updated.callback.answer=Updated
-
 message.stats=Processing: <b>{0}</b>\n\
 Waiting: <b>{1}</b>\n\
 Errors: <b>{2}</b>
+retry.command.description=Retry
+message.retry.answer=I try again
