--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -90,3 +90,5 @@ updated.callback.answer=Обновлено
 message.stats=Обрабатывается: {0}\n\
 В ожидании: {1}\n\
 Ошибок: {2}
+retry.command.description=Попробовать еще раз
+message.retry.answer=Пробую еще раз
