--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -95,4 +95,4 @@ message.stats=Processing: <b>{0}</b>\n\
 Waiting: <b>{1}</b>\n\
 Errors: <b>{2}</b>
 retry.command.description=Retry
-message.retry.answer=I try again
+message.retry.answer=Trying again
