Добавил в статистику количество конвертаций в день

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -89,6 +89,7 @@ update.query.status.command.description=Обновить статус
 updated.callback.answer=Обновлено
 message.stats=Обрабатывается: {0}\n\
 В ожидании: {1}\n\
-Ошибок: {2}
+Ошибок: {2}\n\
+Сегодня сконвертировано: <b>{3}</b>
 retry.command.description=Попробовать еще раз
 message.retry.answer=Пробую еще раз
