--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,6 +93,7 @@ update.query.status.command.description=Update status
 updated.callback.answer=Updated
 message.stats=Processing: <b>{0}</b>\n\
 Waiting: <b>{1}</b>\n\
-Errors: <b>{2}</b>
+Errors: <b>{2}</b>\n\
+Today conversions: <b>{3}</b>
 retry.command.description=Retry
 message.retry.answer=Trying again
