Добавил в статистику количество конвертаций в день

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -94,6 +94,6 @@ updated.callback.answer=Updated
 message.stats=Processing: <b>{0}</b>\n\
 Waiting: <b>{1}</b>\n\
 Errors: <b>{2}</b>\n\
-Today conversions: <b>{3}</b>
+Converted today: <b>{3}</b>
 retry.command.description=Retry
 message.retry.answer=Trying again
