Если идет сжатие пишем в прогрессе Сжимаю

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -78,6 +78,7 @@ waiting.step=Waiting
 downloading.step=Downloading
 downloading.files.step=Downloaded {0} files of {1}
 converting.step=Converting
+compressing.step=Compressing
 uploading.step=Uploading
 icon.check=\u2705
 message.eta=ETA:
