--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -75,6 +75,7 @@ convert.command.description=конвертация
 language.command.description=изменить язык
 start.command.description=перезапустить бот
 help.command.description=помощь
+compressing.step=Сжатие
 formats.command.description=поддерживаемые форматы конвертации
 message.input.file.wait=Подождите пока обработается последний отправленный вами файл
 message.input.file.wait.ttl=Вы можете отправить новый файл через {0} секунд(ы)
