Отмена текущих задач при конвертации

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -98,3 +98,4 @@ Errors: <b>{2}</b>\n\
 Converted today: <b>{3}</b>
 retry.command.description=Retry
 message.retry.answer=Trying again
+message.current.tasks.canceled=Your previous conversions canceled and added new conversion
