--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -94,3 +94,4 @@ message.stats=Обрабатывается: {0}\n\
 Сегодня сконвертировано: <b>{3}</b>
 retry.command.description=Попробовать еще раз
 message.retry.answer=Пробую еще раз
+message.current.tasks.canceled=Ваши предыдущие конвертации отменены и добавлена новая конвертация
