--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,7 +19,7 @@ message.unsupported.format=I can’t work with files in this format yet. The sup
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
 cancel.query.command.description=Cancel
 message.query.canceled=Query cancelled
-message.query.item.not.found=Query doesn't found. Completed or cancelled.
+message.query.item.not.found=Query doesn't found. Completed or cancelled or you have sent a new conversion when i was converting this file.
 message.need.subscription=To use the bot, <b>you must be subscribed to the channel</b> @smart_file_utils. \
 There will be published the bot news and updates. If you have any problems write to us in <a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A">Customer service</a>.
 message.welcome=Welcome to the <b>free</b> converter bot. \n\n\
