--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -92,10 +92,18 @@ message.default.conversion=Use @SmartConverter_bot for documents, images, links 
 message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
 update.query.status.command.description=Update status
 updated.callback.answer=Updated
-message.stats=Processing: <b>{0}</b>\n\
+message.stats=<b>Queue</b>\n\
+Processing: <b>{0}</b>\n\
 Waiting: <b>{1}</b>\n\
-Errors: <b>{2}</b>\n\
-Converted today: <b>{3}</b>
+Errors: <b>{2}</b>\n\n\
+<b>Conversions</b>\n\
+Today: <b>{3}</b>\n\
+Yesterday: <b>{4}</b>\n\
+Weekly: <b>{5}</b>\n\
+Monthly: <b>{6}</b>\n\
+All: <b>{7}</b>\n\n\
+<b>Activity</b>:\n\
+Today: <b>{8}</b>
 retry.command.description=Retry
 message.retry.answer=Trying again
 message.current.tasks.canceled=Your previous conversions canceled and added new conversion
