Фикс работы с кривыми файлами и команды для администрирования Downloading exception игнорим и оставляем файл в обработке Обработка flood wait bot api

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -107,3 +107,12 @@ Today: <b>{8}</b>
 retry.command.description=Retry
 message.retry.answer=Trying again
 message.current.tasks.canceled=Your previous conversions canceled and added new conversion
+message.conversion.stats=Status: <b>{0}</b>\n\
+Format: <b>{1}</b>\n\
+Target format: <b>{2}</b>\n\
+Created at: <b>{3}</b>\n\
+Started at: <b>{4}</b>\n\
+Last run at: <b>{5}</b>\n\
+Completed at: <b>{6}</b>\n\
+File id: <b>{7}</b>\n\
+Result file id: <b>{8}</b>
