--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -103,3 +103,12 @@ message.stats=<b>Очередь</b>\n\
 retry.command.description=Попробовать еще раз
 message.retry.answer=Пробую еще раз
 message.current.tasks.canceled=Ваши предыдущие конвертации отменены и добавлена новая конвертация
+message.conversion.stats=Status: <b>{0}</b>\n\
+Format: <b>{1}</b>\n\
+Target format: <b>{2}</b>\n\
+Created at: <b>{3}</b>\n\
+Started at: <b>{4}</b>\n\
+Last run at: <b>{5}</b>\n\
+Completed at: <b>{6}</b>\n\
+File id: <b>{7}</b>\n\
+Result file id: <b>{8}</b>
