Фикс более детальное сообщение для архивов

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,6 +18,8 @@ message.bot.restarted=The bot was restarted. <b>Please, retry the request.</b>
 message.unsupported.format=I can’t work with files in this format yet. The supported file formats can be found \
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
 cancel.query.command.description=Cancel
+message.unsupported.file=I can’t work with files in this format yet. Your file mime type is <b>{0}</b>. The supported file formats can be found \
+in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
 message.query.canceled=Query cancelled
 message.query.item.not.found=Query doesn't found. Completed or cancelled or you have sent a new conversion when i was converting this file.
 message.need.subscription=To use the bot, <b>you must be subscribed to the channel</b> @smart_file_utils. \
