--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -15,6 +15,8 @@ go.back.command.name=\u2B05Назад
 message.bot.restarted=Бот был перезапущен. <b>Повторите пожалуйста запрос.</b>
 message.unsupported.format=Пока я не умею работать с файлами данного формата. Список поддерживаемых форматов вы \
 можете найти в статье <a href="https://tgraph.io/Formats-05-14">Бот SmartFileUtils.</a>
+message.unsupported.file=Пока я не умею работать с файлами данного формата. Майм тип вашего файла <b>{0}</b>. Список поддерживаемых форматов вы \
+можете найти в статье <a href="https://tgraph.io/Formats-05-14">Бот SmartFileUtils.</a>
 cancel.query.command.description=Отменить
 message.query.canceled=Запрос отменен
 message.query.item.not.found=Запрос не найден. Либо уже был завершен, либо отменен, либо вы отправили новый файл, когда я выполнял конвертацию этого файла.
