--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -88,8 +88,7 @@ message.speed=Speed
 message.calculated=calculated
 message.bot.is.sleeping=There was telegram <b>flood wait</b> limit. I can''t handle files bigger than <b>20 MB</b> now. Try again after about <b>{0} seconds</b>.
 message.text.appended=Text appended
-message.file.appended=File added
-message.files.appended=Files added
+message.files.appended=Files added. Keep sending. When done select a format on the keyboard.
 message.default.conversion=Use @SmartConverter_bot for documents, images, links and text conversions
 message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
 update.query.status.command.description=Update status
