Фикс обновляем не каждый раз сообщение

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -113,3 +113,8 @@ Last run at: <b>{5}</b>\n\
 Completed at: <b>{6}</b>\n\
 File id: <b>{7}</b>\n\
 Result file id: <b>{8}</b>
+downloading.step=Скачивание
+uploading.step=Загрузка
+waiting.step=Ожидание обработки
+message.video.compress.queued=Видео будет сжато\n\
+Место в очереди: <b>{0}</b>
