Лимитирование загрузки файлов

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -117,3 +117,4 @@ Last run at: <b>{5}</b>\n\
 Completed at: <b>{6}</b>\n\
 File id: <b>{7}</b>\n\
 Result file id: <b>{8}</b>
+max.file.size=I can't handle files bigger than <b>{0}</b>. Please, try again later.
