--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -118,3 +118,4 @@ uploading.step=Загрузка
 waiting.step=Ожидание обработки
 message.video.compress.queued=Видео будет сжато\n\
 Место в очереди: <b>{0}</b>
+max.file.size=Я не могу обработать файлы больше чем <b>{0}</b>. Пожалуйста, попробуйте позже.
