Фикс сообщений приветственных

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -60,7 +60,9 @@ message.choose.type=Choose type for converting on the keyboard
 message.session.expired=Session expired. Try to return to the previous menu and perform the action again from the very beginning.
 message.too.large.in.file=You sent a file with a size too large {0}. Telegram limit is 2000 MB.
 message.too.large.out.file=The resulting file {0} is too large {1} and we cannot send it. Telegram limit is 2000 MB.
-message.convert.file=Send me a file, link or text which you want to convert.
+message.convert.file=Send me a file, link, text or video which you want to convert.
+message.convert.document.file=Send me a file, link or text which you want to convert.
+message.convert.video.file=Send me a video which you want to convert.
 message.zero.length.file=File could not be processed. Please try again later.
 message.choose.language=Choose language
 message.language.selected=Language updated
