--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -120,3 +120,5 @@ Completed at: <b>{6}</b>\n\
 File id: <b>{7}</b>\n\
 Result file id: <b>{8}</b>
 max.file.size=I can't handle files bigger than <b>{0}</b>. Please, try again later.
+message.dont.send.new.request.warn=<b>Warning</b>:\nDon't click <b>Back</b> button and don't send a new file, otherwise the current request will be canceled.
+message.dont.send.new.request=Don't click <b>Back</b> button and don't send a new file, otherwise the current request will be canceled.
