--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -121,5 +121,5 @@ waiting.step=Ожидание обработки
 message.video.compress.queued=Видео будет сжато\n\
 Место в очереди: <b>{0}</b>
 max.file.size=Я не могу обработать файлы больше чем <b>{0}</b>. Пожалуйста, попробуйте позже.
-message.dont.send.new.request.warn=<b>Предупреждение</b>:\nНе нажимайте кнопку <b>Назад</b> и не отправляйте новый файл, иначе текущий запрос будет отменен.
-message.dont.send.new.request=Не нажимайте кнопку <b>Назад</b> и не отправляйте новый файл, иначе текущий запрос будет отменен.
+message.dont.send.new.request.warn=<b>Предупреждение</b>:\nНе отправляйте новый файл, иначе текущий запрос будет отменен.
+message.dont.send.new.request=Не отправляйте новый файл, иначе текущий запрос будет отменен.
