--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -119,6 +119,6 @@ Last run at: <b>{5}</b>\n\
 Completed at: <b>{6}</b>\n\
 File id: <b>{7}</b>\n\
 Result file id: <b>{8}</b>
-max.file.size=I can't handle files bigger than <b>{0}</b>. Please, try again later.
+max.file.size=I can''t handle files bigger than <b>{0}</b>. Please, try again later.
 message.dont.send.new.request.warn=<b>Warning</b>:\nDon't send a new file, otherwise the current request will be canceled.
 message.dont.send.new.request=Don't send a new file, otherwise the current request will be canceled.
