--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -117,6 +117,7 @@ File id: <b>{7}</b>\n\
 Result file id: <b>{8}</b>
 downloading.step=Скачивание
 uploading.step=Загрузка
+converting.step=Конвертация
 waiting.step=Ожидание обработки
 message.video.compress.queued=Видео будет сжато\n\
 Место в очереди: <b>{0}</b>
