Статистика по ботам

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -95,7 +95,15 @@ message.default.conversion=Use @SmartConverter_bot for documents, images, links 
 message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
 update.query.status.command.description=Update status
 updated.callback.answer=Updated
-message.stats=<b>Queue</b>\n\
+message.queue.stats=<b>Today</b>\n\
+Processing: {0}\n\
+Waiting: {1}\n\
+Errors: {2}\n\
+Completed: {3}\n\
+Activity: {4}\n\n\
+<b>All time</b>\n\
+Errors: {5}
+message.custom.stats=<b>Queue</b>\n\
 Processing: <b>{0}</b>\n\
 Waiting: <b>{1}</b>\n\
 Errors: <b>{2}</b>\n\n\
