--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -111,6 +111,7 @@ message.queue.stats=<b>Сегодня</b>\n\
 Активность: {4}\n\n\
 <b>За все время</b>\n\
 Ошибок: {5}
+message.global.stats=<b>Активность:</b> {0}
 retry.command.description=Попробовать еще раз
 message.retry.answer=Пробую еще раз
 message.current.tasks.canceled=Ваши предыдущие конвертации отменены и добавлена новая конвертация
