--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -103,6 +103,7 @@ Completed: {3}\n\
 Activity: {4}\n\n\
 <b>All time</b>\n\
 Errors: {5}
+message.global.stats=<b>Activity</b>: {0}
 message.custom.stats=<b>Queue</b>\n\
 Processing: <b>{0}</b>\n\
 Waiting: <b>{1}</b>\n\
