--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,6 +93,7 @@ message.text.appended=Text appended
 message.files.appended=Files added. Keep sending. When done select a format on the keyboard.
 message.default.conversion=Use @SmartConverter_bot for documents, images, links and text conversions
 message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
+message.audio.conversion=Use @SmartAudioConverterBot for audios conversion
 update.query.status.command.description=Update status
 updated.callback.answer=Updated
 message.queue.stats=<b>Today</b>\n\
