--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,8 +11,9 @@ message.unknown.command=I can’t execute this command
 message.error=Something went wrong. <b>Please, report the incident to</b> <a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A">Customer service</a> <b>and retry the request later.</b>
 message.empty.file.name=File
 message.choose.another.format=Choose another format
-message.choose.target.extension=Great! I can convert it. Choose type for converting on the keyboard. Keep sending files if you want to combine them into 1 format. \
+message.choose.target.extension.default.conversion=Great! I can convert it. Choose type for converting on the keyboard. Keep sending files if you want to combine them into 1 format. \
 For example images to pdf.
+message.choose.target.extension.video.audio.conversion=Great! I can convert it. Choose type for converting on the keyboard.
 go.back.command.name=\u2B05Back
 message.bot.restarted=The bot was restarted. <b>Please, retry the request.</b>
 message.unsupported.format=I can’t work with files in this format yet. The supported file formats can be found \
@@ -60,9 +61,10 @@ message.choose.type=Choose type for converting on the keyboard
 message.session.expired=Session expired. Try to return to the previous menu and perform the action again from the very beginning.
 message.too.large.in.file=You sent a file with a size too large {0}. Telegram limit is 2000 MB.
 message.too.large.out.file=The resulting file {0} is too large {1} and we cannot send it. Telegram limit is 2000 MB.
-message.convert.file=Send me a file, link, text or video which you want to convert.
+message.convert.file=Send me a file, link, text, video, audio which you want to convert.
 message.convert.document.file=Send me a file, link or text which you want to convert.
 message.convert.video.file=Send me a video which you want to convert.
+message.convert.audio.file=Send me an audio which you want to convert.
 message.zero.length.file=File could not be processed. Please try again later.
 message.choose.language=Choose language
 message.language.selected=Language updated
