--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,7 +1,7 @@
 message.file.queued=Файл будет сконвертирован в <b>{0}</b>\n\
-Место в очереди: <b>{1}</b>
+Место в глобальной очереди: <b>{1}</b>
 message.files.queued=Видео файл будет сжат\n\
-Место в очереди: <b>{0}</b>
+Место в глобальной очереди: <b>{0}</b>
 message.file.format=Формат: <b>{0}</b>
 message.file.size=Размер: <b>{0}</b>
 message.files.count=Файлов: <b>{0}</b>
@@ -132,6 +132,6 @@ uploading.step=Загрузка
 converting.step=Конвертация
 waiting.step=Ожидание обработки
 message.video.compress.queued=Видео будет сжато\n\
-Место в очереди: <b>{0}</b>
+Место в глобальной очереди: <b>{0}</b>
 max.file.size=Я не могу обработать файлы больше чем <b>{0}</b>. Пожалуйста, попробуйте позже.
 message.dont.send.new.request=Не отправляйте новый файл, иначе текущий запрос будет отменен.
