Статистика очередей по скачке и загрузке

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -106,14 +106,32 @@ message.custom.stats=<b>Очередь</b>\n\
 Все: <b>{7}</b>\n\n\
 <b>Активность</b>\n\
 Сегодня: <b>{8}</b>
-message.queue.stats=<b>Сегодня</b>\n\
+message.queue.stats=<b>Очередь</b>\n\
+<b>Сегодня</b>\n\
 Обрабатывается: {0}\n\
 В ожидании: {1}\n\
 Ошибок: {2}\n\
 Обработано: {3}\n\
-Активность: {4}\n\n\
+Активность: {4}\n\
 <b>За все время</b>\n\
-Ошибок: {5}
+Ошибок: {5}\n\n\
+<b>Downloads</b>\n\
+<b>Сегодня</b>\n\
+Обрабатывается: {6}\n\
+В ожидании: {7}\n\
+Ошибок: {8}\n\
+Обработано: {9}\n\
+<b>За все время</b>\n\
+Ошибок: {10}\n\
+Wrong file ids: {11}\n\n\
+<b>Uploads</b>\n\
+<b>Сегодня</b>\n\
+Обрабатывается: {12}\n\
+В ожидании: {13}\n\
+Ошибок: {14}\n\
+Обработано: {15}\n\
+<b>За все время</b>\n\
+Ошибок: {16}
 message.global.stats=<b>Активность:</b> {0}
 retry.command.description=Попробовать еще раз
 message.retry.answer=Пробую еще раз
