--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -98,14 +98,32 @@ message.video.conversion=Use @SmartVideoConverterBot for videos conversion and c
 message.audio.conversion=Use @SmartAudioConverterBot for audios conversion
 update.query.status.command.description=Update status
 updated.callback.answer=Updated
-message.queue.stats=<b>Today</b>\n\
+message.queue.stats=<b>Queue</b>\n\
+<b>Today</b>\n\
 Processing: {0}\n\
 Waiting: {1}\n\
 Errors: {2}\n\
 Completed: {3}\n\
-Activity: {4}\n\n\
+Activity: {4}\n\
 <b>All time</b>\n\
-Errors: {5}
+Errors: {5}\n\n\
+<b>Downloads</b>\n\
+<b>Today</b>\n\
+Processing: {6}\n\
+Waiting: {7}\n\
+Errors: {8}\n\
+Completed: {9}\n\
+<b>All time</b>\n\
+Errors: {10}\n\
+Wrong file ids: {11}\n\n\
+<b>Uploads</b>\n\
+<b>Today</b>\n\
+Processing: {12}\n\
+Waiting: {13}\n\
+Errors: {14}\n\
+Completed: {15}\n\
+<b>All time</b>\n\
+Errors: {16}
 message.global.stats=<b>Activity</b>: {0}
 message.custom.stats=<b>Queue</b>\n\
 Processing: <b>{0}</b>\n\
