Переделал логику скачки множества файлов

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -5,6 +5,7 @@ message.files.queued=Видео файл будет сжат\n\
 message.file.format=Формат: <b>{0}</b>
 message.file.size=Размер: <b>{0}</b>
 message.files.count=Файлов: <b>{0}</b>
+downloading.files.step=Скачано {0} файлов из {1}
 message.unknown.command=Я не могу выполнить данную команду
 message.error=Что то пошло не так. <b>Пожалуйста, сообщите об инциденте в</b> <a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A">Службу поддержки</a> <b>и повторите запрос.</b>
 message.empty.file.name=Файл
