Еще одна статистика

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -133,6 +133,14 @@ Wrong file ids: {11}\n\n\
 Обработано: {15}\n\
 <b>За все время</b>\n\
 Ошибок: {16}
+message.work.thread.pool.stats=Heavy core pool size: {0}\n\
+Light core pool size: {1}\n\
+Heavy active count: {2}\n\
+Light active count: {3}\n\
+Processing heavy: {4}\n\
+Processing light: {5}\n\
+Ready heavy: {6}\n\
+Ready light: {7}
 message.global.stats=<b>Активность:</b> {0}
 retry.command.description=Попробовать еще раз
 message.retry.answer=Пробую еще раз
