--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -124,6 +124,14 @@ Errors: {14}\n\
 Completed: {15}\n\
 <b>All time</b>\n\
 Errors: {16}
+message.work.thread.pool.stats=Heavy core pool size: {0}\n\
+Light core pool size: {1}\n\
+Heavy active count: {2}\n\
+Light active count: {3}\n\
+Processing heavy: {4}\n\
+Processing light: {5}\n\
+Ready heavy: {6}\n\
+Ready light: {7}
 message.global.stats=<b>Activity</b>: {0}
 message.custom.stats=<b>Queue</b>\n\
 Processing: <b>{0}</b>\n\
