--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -131,7 +131,8 @@ Light active count: {3}\n\
 Processing heavy: {4}\n\
 Processing light: {5}\n\
 Ready heavy: {6}\n\
-Ready light: {7}
+Ready light: {7}\n\
+Processing: {8}
 message.global.stats=<b>Activity</b>: {0}
 message.custom.stats=<b>Queue</b>\n\
 Processing: <b>{0}</b>\n\
