--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -140,7 +140,8 @@ Light active count: {3}\n\
 Processing heavy: {4}\n\
 Processing light: {5}\n\
 Ready heavy: {6}\n\
-Ready light: {7}
+Ready light: {7}\n\
+Processing: {8}
 message.global.stats=<b>Активность:</b> {0}
 retry.command.description=Попробовать еще раз
 message.retry.answer=Пробую еще раз
