Сообщение о том что текст добавлен шлем только 1 раз

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -91,7 +91,7 @@ message.eta=ETA:
 message.speed=Speed
 message.calculated=calculated
 message.bot.is.sleeping=There was telegram <b>flood wait</b> limit. I can''t handle files bigger than <b>20 MB</b> now. Try again after about <b>{0} seconds</b>.
-message.text.appended=Text appended
+message.text.appended=Text appended. Keep sending. When done select a format on the keyboard.
 message.files.appended=Files added. Keep sending. When done select a format on the keyboard.
 message.default.conversion=Use @SmartConverter_bot for documents, images, links and text conversions
 message.video.conversion=Use @SmartVideoConverterBot for videos conversion and compression
