--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -87,7 +87,7 @@ formats.command.description=поддерживаемые форматы конв
 message.input.file.wait=Подождите пока обработается последний отправленный вами файл
 message.input.file.wait.ttl=Вы можете отправить новый файл через {0} секунд(ы)
 message.bot.is.sleeping=Сработал лимит телеграмм <b>flood wait</b>. Я не могу скачать файл больше <b>20 MB</b> сейчас. Попробуйте еще раз примерно через <b>{0} сек</b>.
-message.text.appended=Текст добавлен
+message.text.appended=Текст добавлен. Продолжайте присылать. Когда закончите выберите формат на клавиатуре.
 message.files.appended=Файлы добавлены. Продолжайте присылать. Когда закончите выберите формат на клавиатуре.
 message.calculated=вычисляется
 message.default.conversion=Используйте @SmartConverter_bot для конвертации документов, картинок, ссылок и текста
