Выдавать немного другое сообщение после добавления в очередь иная непонятно и пользователь думает что может новый файл отправить

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -158,3 +158,4 @@ File id: <b>{7}</b>\n\
 Result file id: <b>{8}</b>
 max.file.size=I can''t handle files bigger than <b>{0}</b>. Please, try again later.
 message.dont.send.new.request=Don't send a new file, otherwise the current request will be canceled.
+extra.message.dont.send.new.request=Please don't send a new file until your last request is complete, otherwise it will be canceled.
