--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -161,3 +161,4 @@ message.video.compress.queued=Видео будет сжато\n\
 Место в глобальной очереди: <b>{0}</b>
 max.file.size=Я не могу обработать файлы больше чем <b>{0}</b>. Пожалуйста, попробуйте позже.
 message.dont.send.new.request=Не отправляйте новый файл, иначе текущий запрос будет отменен.
+extra.message.dont.send.new.request=Пожалуйста, не отправляйте новый файл, пока ваш последний запрос не будет завершен, иначе он будет отменен.
